1.深入理解虚拟机